// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/radio/RadioButtonField should render isSelected=false with value=null 1`] = `
<RadioButton
  isSelected={false}
  label="Enter things"
  name="radiobutton"
  onBlur="onblur"
  onChange="onchange"
  value="radioValue"
/>
`;

exports[`components/radio/RadioButtonField should render isSelected=false with value=pumpkin 1`] = `
<RadioButton
  isSelected={false}
  label="Red Velvet"
  meta={
    Object {
      "initialTouched": false,
      "touched": false,
      "value": "redVelvet",
    }
  }
  name="redVelvet"
  onBlur={[Function]}
  onChange={[Function]}
  value="redVelvet"
/>
`;

exports[`components/radio/RadioButtonField should render isSelected=false with value=undefined 1`] = `
<RadioButton
  isSelected={false}
  label="Enter things"
  name="radiobutton"
  onBlur="onblur"
  onChange="onchange"
  value="radioValue"
/>
`;

exports[`components/radio/RadioButtonField should render isSelected=false with value=value 1`] = `
<RadioButton
  isSelected={false}
  label="Enter things"
  name="radiobutton"
  onBlur="onblur"
  onChange="onchange"
  value="radioValue"
/>
`;

exports[`components/radio/RadioButtonField should render isSelected=true with value=chocolate 1`] = `
<RadioButton
  isSelected={false}
  label="Red Velvet"
  meta={
    Object {
      "initialTouched": false,
      "touched": false,
      "value": "redVelvet",
    }
  }
  name="redVelvet"
  onBlur={[Function]}
  onChange={[Function]}
  value="redVelvet"
/>
`;

exports[`components/radio/RadioButtonField should render isSelected=true with value=radioValue 1`] = `
<RadioButton
  isSelected={true}
  label="Enter things"
  name="radiobutton"
  onBlur="onblur"
  onChange="onchange"
  value="radioValue"
/>
`;
